--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MD Top</string>
 
-    <string name="action_lightTheme">Light Theme</string>
+    <string name="action_lightTheme">Light Theme (Selected)</string>
     <string name="action_darkTheme">Dark Theme</string>
 
     <string name="label_dialog_add">Añadir</string>
